style(cases): add blue strip to all the design higlights intros

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -359,21 +359,40 @@
           <h2 id="case-highlights-title" class="case-highlights__title reveal">
             Design highlights
           </h2>
-          <!-- 🍭A new part -->
-          <div class="twocol twocol--wide twocol--intro add-big-margin-bottom">
-            <h3 class="twocol__heading twocol__heading-special reveal">
-              Starting with the fun part: the designs
-            </h3>
-            <div class="twocol__main">
-              <p class="reveal">
-                Once you’ve seen the designs, scroll down to learn about all the
-                behind-the-scenes details (or
-                <a href="#nav-problem" class="inline-link">click here</a> to go
-                straight to it)!
-              </p>
+        </div>
+        <!-- 🍭A new part -->
+
+        <div class="design-intro_bg add-big-margin-bottom">
+          <img
+            src="../assets/icons/flower_red.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--left flower--left"
+            aria-hidden="true"
+          />
+          <img
+            src="../assets/icons/flower_red_round.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--right"
+            aria-hidden="true"
+          />
+          <div class="container design-intro__content">
+            <div class="twocol twocol--wide twocol--intro">
+              <h3 class="twocol__heading twocol__heading-special reveal">
+                Starting with the fun part: the designs
+              </h3>
+              <div class="twocol__main">
+                <p class="reveal">
+                  Once you’ve seen the designs, scroll down to learn about all
+                  the behind-the-scenes details (or
+                  <a href="#nav-problem" class="inline-link">click here</a> to
+                  go straight to it)!
+                </p>
+              </div>
             </div>
           </div>
-          <!-- 🍭END: A new part -->
+        </div>
+        <!-- 🍭END: A new part -->
+        <div class="container">
           <div class="case-highlights__list">
             <!-- First highlight -->
             <h2 class="highlight-decor">Homepage widgets</h2>
