--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -172,6 +172,27 @@
                   </a>
                 </li>
                 <li>
+                  <a href="#nav-design" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"
+                      ><img
+                        src="../assets/icons/designs.svg"
+                        alt=""
+                        width="38"
+                        height="38"
+                        aria-hidden="true"
+                    /></span>
+                    <span class="jump-menu__label">Designs</span>
+                    <span class="jump-menu__arrow-bg"
+                      ><img
+                        src="../assets/icons/arrow-right.svg"
+                        alt=""
+                        width="16"
+                        height="16"
+                        aria-hidden="true"
+                    /></span>
+                  </a>
+                </li>
+                <li>
                   <a href="#nav-problem" class="jump-menu__link">
                     <span class="jump-menu__icon-bg"
                       ><img
@@ -213,27 +234,7 @@
                     /></span>
                   </a>
                 </li>
-                <li>
-                  <a href="#nav-design" class="jump-menu__link">
-                    <span class="jump-menu__icon-bg"
-                      ><img
-                        src="../assets/icons/designs.svg"
-                        alt=""
-                        width="38"
-                        height="38"
-                        aria-hidden="true"
-                    /></span>
-                    <span class="jump-menu__label">Designs</span>
-                    <span class="jump-menu__arrow-bg"
-                      ><img
-                        src="../assets/icons/arrow-right.svg"
-                        alt=""
-                        width="16"
-                        height="16"
-                        aria-hidden="true"
-                    /></span>
-                  </a>
-                </li>
+
                 <li>
                   <a href="#nav-impact" class="jump-menu__link">
                     <span class="jump-menu__icon-bg"
@@ -358,21 +359,40 @@
           <h2 id="case-highlights-title" class="case-highlights__title reveal">
             Design highlights
           </h2>
-          <!-- 🍭A new part -->
-          <div class="twocol twocol--wide twocol--intro add-big-margin-bottom">
-            <h3 class="twocol__heading twocol__heading-special reveal">
-              Starting with the fun part: the designs
-            </h3>
-            <div class="twocol__main">
-              <p class="reveal">
-                Once you’ve seen the designs, scroll down to learn about all the
-                behind-the-scenes details (or
-                <a href="#nav-problem" class="inline-link">click here</a> to go
-                straight to it)!
-              </p>
+        </div>
+        <!-- 🍭A new part -->
+
+        <div class="design-intro_bg add-big-margin-bottom">
+          <img
+            src="../assets/icons/flower_red.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--left flower--left"
+            aria-hidden="true"
+          />
+          <img
+            src="../assets/icons/flower_red_round.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--right"
+            aria-hidden="true"
+          />
+          <div class="container design-intro__content">
+            <div class="twocol twocol--wide twocol--intro">
+              <h3 class="twocol__heading twocol__heading-special reveal">
+                Starting with the fun part: the designs
+              </h3>
+              <div class="twocol__main">
+                <p class="reveal">
+                  Once you’ve seen the designs, scroll down to learn about all
+                  the behind-the-scenes details (or
+                  <a href="#nav-problem" class="inline-link">click here</a> to
+                  go straight to it)!
+                </p>
+              </div>
             </div>
           </div>
-          <!-- 🍭END: A new part -->
+        </div>
+        <!-- 🍭END: A new part -->
+        <div class="container">
           <h2 class="highlight-decor">Homepage</h2>
           <div class="case-highlights__list add-big-margin-bottom">
             <!-- First sub-block -->
@@ -1021,7 +1041,7 @@
 
           <!-- Two columns: Prototyping and testing -->
           <section
-            class="case-howmightwe__block reveal"
+            class="case-howmightwe__block add-big-margin-bottom reveal"
             aria-labelledby="case-howmightwe-7-title"
           >
             <div class="twocol twocol--wide">
