feat(cases): add design intro, thank-you section, and end images to all case pages

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -1451,6 +1451,39 @@
           </dl>
         </div>
       </section>
+      <!-- 🍒Closing image -->
+      <article class="case-highlights__item">
+        <div class="case-highlights__visual case-highlights__visual-var reveal">
+          <div
+            class="case-highlights__visual-col case-highlights__visual-var case-highlights__visual-col--left"
+          >
+            <img
+              src="../assets/images/ios.png"
+              alt="Everwell iOS app home screen showing personalized health tasks, resources, and navigation tabs for Home, Programs, and Library."
+              class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
+            />
+          </div>
+        </div>
+      </article>
+      <!-- 🍒END:Closing image -->
+      <!-- 🍭A new part -->
+      <div class="design-intro_bg add-big-margin-bottom">
+        <div class="container design-intro__content">
+          <div class="twocol twocol--wide twocol--intro">
+            <h3 class="twocol__heading twocol__heading-special reveal">
+              Thank you for reading!
+            </h3>
+            <div class="twocol__main">
+              <p class="reveal">
+                <a href="#nav-design" class="inline-link"
+                  >Click here to revisit the designs</a
+                ><br />or explore another case study using the buttons below.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 🍭END: A new part -->
       <!-- 🦊prev/next buttons -->
       <nav class="case-nav reveal">
         <div class="container">
