--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -395,7 +395,7 @@
         <div class="container">
           <div class="case-highlights__list">
             <!-- First highlight -->
-            <h2 class="highlight-decor">Home page</h2>
+            <h2 class="highlight-decor reveal">Home page</h2>
             <article class="case-highlights__item reveal">
               <div class="case-highlights__visual reveal visible">
                 <img
@@ -1215,8 +1215,17 @@
           </dl>
         </div>
       </section>
+      <article class="case-highlights__item">
+        <div class="case-highlights__visual-rows reveal">
+          <!-- Big image -->
+          <img
+            src="../assets/images/Patient_profile.gif"
+            alt="Everwell patient profile for Hannah Johnson showing physical and mental health trend lines over six months, clinical insights, and general information"
+            class="case-highlights__visual-image case-highlights__visual-image-corners case-highlights__visual-image--large img-bdr-btm reveal"
+          />
+        </div>
+      </article>
       <!-- 🍭A new part -->
-
       <div class="design-intro_bg add-big-margin-bottom">
         <div class="container design-intro__content">
           <div class="twocol twocol--wide twocol--intro">
