--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -291,7 +291,7 @@
           </h2>
           <figure class="case-image__wrapper">
             <img
-              src="../assets/images/Home-1.png"
+              src="../assets/images/Home_HCH_Title_V1.png"
               alt="Digital check-in screen for Horizon Children’s Hospital showing a welcome message, estimated ER wait time, and option to start a quick intake screener."
               class="case-image__image"
             />
@@ -1449,6 +1449,40 @@
         </div>
       </section>
 
+      <!-- 🍒Closing picture block -->
+      <article class="case-highlights__item reveal">
+        <div class="case-highlights__visual">
+          <img
+            src="../assets/images/Home - mobile.png"
+            alt="Homepage welcome screen with nurse and child illustration"
+            class="case-highlights__visual-image case-highlights__visual-image--wide reveal"
+          />
+          <img
+            src="../assets/images/Wait times modal.png"
+            alt="Wait time modal with bear illustration explaining expectations"
+            class="case-highlights__visual-image case-highlights__visual-image--narrow reveal"
+          />
+        </div>
+      </article>
+      <!-- 🍒END:Closing picture block -->
+      <!-- 🍭A new part -->
+      <div class="design-intro_bg add-big-margin-bottom">
+        <div class="container design-intro__content">
+          <div class="twocol twocol--wide twocol--intro">
+            <h3 class="twocol__heading twocol__heading-special reveal">
+              Thank you for reading!
+            </h3>
+            <div class="twocol__main">
+              <p class="reveal">
+                <a href="#nav-design" class="inline-link"
+                  >Click here to revisit the designs</a
+                ><br />or explore another case study using the buttons below.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 🍭END: A new part -->
       <!-- 🦊prev/next buttons -->
       <nav class="case-nav reveal">
         <div class="container">
