style(cases): add THank you to the closing image; fixed minor spacing issues

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -1215,6 +1215,9 @@
           </dl>
         </div>
       </section>
+      <div class="container">
+        <h2 class="highlight-decor highlight-decor-add">Thank you!</h2>
+      </div>
       <article class="case-highlights__item">
         <div class="case-highlights__visual-rows reveal">
           <!-- Big image -->
