--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -1452,6 +1452,9 @@
         </div>
       </section>
       <!-- 🍒Closing image -->
+      <div class="container">
+        <h2 class="highlight-decor highlight-decor-add">Thank you!</h2>
+      </div>
       <article class="case-highlights__item">
         <div class="case-highlights__visual case-highlights__visual-var reveal">
           <div
