--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -394,7 +394,7 @@
         <!-- 🍭END: A new part -->
         <div class="container">
           <h2 class="highlight-decor">Homepage</h2>
-          <div class="case-highlights__list add-big-margin-bottom">
+          <div class="case-highlights__list">
             <!-- First sub-block -->
             <article class="case-highlights__item reveal">
               <div class="case-highlights__visual">
@@ -1324,9 +1324,7 @@
           <div class="twocol twocol--wide">
             <h3 class="twocol__heading">If continued…</h3>
             <div class="twocol__main">
-              <p class="add-small-margin-bottom">
-                Future improvements I envisioned:
-              </p>
+              <p class="">Future improvements I envisioned:</p>
               <ul>
                 <li>Tooltips for complex medical terms</li>
                 <li>Separate flows for caregivers vs. older children</li>
@@ -1450,6 +1448,9 @@
       </section>
 
       <!-- 🍒Closing picture block -->
+      <div class="container">
+        <h2 class="highlight-decor">Thank you!</h2>
+      </div>
       <article class="case-highlights__item reveal">
         <div class="case-highlights__visual">
           <img
