style(case) fix the padding in Design Highlights #2

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -494,7 +494,7 @@
             <!-- Second highlight -->
             <h2 class="highlight-decor">Resource library</h2>
             <article
-              class="case-highlights__item case-highlights__item--overlay"
+              class="case-highlights__item case-highlights__item-pad case-highlights__item--overlay"
             >
               <div
                 class="case-highlights__visual case-highlights__visual-var case-highlights__visual--centered reveal"
