perf: optimize site performance and loading

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="hero__info reveal">
                   <div class="hero__info-item reveal">
                     <span class="hero__icon">💫</span>
-                    <span class="hero__info-text">open to work</span>
+                    <span class="hero__info-text">5+ years of experience</span>
                   </div>
                   <div class="hero__info-item reveal">
                     <span class="hero__icon">📍</span>
