fix: correct text and minor content issues on case page

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -312,18 +312,18 @@
           <!-- Left column -->
           <div class="case-overview__description reveal">
             <p class="case-overview__paragraph">
-              This case study covers the end-to-end design of a digital triage
-              tool built for a Canadian children’s hospital.
+              Families often arrive at the ER anxious and unsure how to explain
+              what’s wrong. Triage nurses are stretched thin due to high intake
+              volume and a strained healthcare system.
             </p>
             <p class="case-overview__paragraph">
-              The goal of the project was to streamline patient intake, reduce
-              nurse burden, and improve the experience for families visiting the
-              ER.
+              We created a digital triage tool for a Canadian children's
+              hospital that supports both sides: making the experience more
+              reassuring for caregivers and simplifying intake for staff.
             </p>
             <p class="case-overview__paragraph">
-              I owned the end-to-end UX from early research through
-              high-fidelity design, collaborating with clinicians and the PM on
-              the project.
+              I led the 0 → 1 design, working closely with the PM, engineering,
+              and clinical teams.
             </p>
             <aside class="case-overview__note" role="note">
               <strong>Note:</strong> some details of the project have been
