feature(case): add a block into Design Highlights, case2

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -592,7 +592,9 @@
 
             <!-- Fifth sub-block -->
             <h2 class="highlight-decor">Multiple patients</h2>
-            <article class="case-highlights__item reveal no-padding-bottom">
+            <article
+              class="case-highlights__item reveal no-padding-bottom add-small-margin-bottom"
+            >
               <div class="case-highlights__visual">
                 <img
                   src="../assets/images/Results - 3 card.png"
@@ -602,7 +604,7 @@
               </div>
               <div class="twocol twocol--wide reveal add-small-pagging-top">
                 <h3 class="twocol__heading">Multiple patients</h3>
-                <div class="twocol__main">
+                <div class="twocol__main add-big-margin-bottom">
                   <p>
                     I designed this page to display result cards for multiple
                     patients in an easy-to-scan format. Each card shows the
@@ -614,6 +616,49 @@
                     combination of pagination and a visual scrolling affordance:
                     part of the next card is visible at the screen’s edge,
                     encouraging users to swipe or scroll.
+                  </p>
+                </div>
+              </div>
+            </article>
+            <!-- Sixth sub-block -->
+            <h2 class="highlight-decor">Leveraging AI</h2>
+            <article
+              class="case-highlights__item reveal case-highlights__item-nopad-btm"
+            >
+              <div class="case-highlights__visual">
+                <img
+                  src="../assets/images/HCH 1.png"
+                  alt="Screen showing patient age selection with a helper note explaining to fill the form as if you are the patient"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
+                />
+                <img
+                  src="../assets/images/HCH_2_3.png"
+                  alt="Screen with injury-related question showing Yes and No radio buttons"
+                  class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
+                />
+              </div>
+              <div
+                class="twocol twocol--wide twocol--wide-mg40 add-small-pagging-top twocol--wide-mg40-nomag-btm"
+              >
+                <h3 class="twocol__heading reveal">Leveraging AI</h3>
+                <div class="twocol__main">
+                  <p>
+                    After launch, we learned that caregivers often struggled to
+                    describe symptoms in their own words, and the
+                    clinically-verified screener felt too rigid.
+                  </p>
+                  <p>
+                    To support them, I designed a follow-up step to the
+                    screener: an optional AI helper that gently guides a
+                    follow-up conversation to allow users to share their
+                    concerns in more detail. It also provides nurses with
+                    clearer, structured information without adding to their
+                    workload.
+                  </p>
+                  <p>
+                    For this feature, we were careful to communicate that the AI
+                    supports communication, but does not diagnose or replace
+                    clinical judgment.
                   </p>
                 </div>
               </div>
