feature(cases): replace 2 png to gif in the 6-th highlight in the Children case; replaced text in Project overview in two other cases

--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -309,14 +309,21 @@
           <!-- Left column -->
           <div class="case-overview__description reveal">
             <p class="case-overview__paragraph">
-              Everwell developed a digital platform to automate patient-reported
-              data collection and help providers track health trends over time.
+              At some clinics, patients with chronic conditions are asked to
+              complete PROMs (patient-reported outcome measures). But the
+              existing system made it difficult for clinicians to see progress
+              over time, and the patients were overwhelmed trying to track how
+              they were feeling.
             </p>
             <p class="case-overview__paragraph">
-              Once manual questions were with automated questionnaires and
-              real-time insights, the questionnaire completion rates drastically
-              grew and clinicians were able make faster, more informed decisions
-              and deliver proactive care.
+              We redesigned this into a data-driven Trends experience that makes
+              health progress clear, approachable, and actionable for both
+              patients and care teams. I led the visualization strategy and the
+              patient-facing side of the experience.
+            </p>
+            <p class="case-overview__paragraph">
+              As a result, completion rates increased to 98%, and clinicians can
+              now quickly identify changes and risks.
             </p>
             <aside class="case-overview__note" role="note">
               <strong>Note:</strong> some details of the project have been
