--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -311,13 +311,21 @@
           <!-- Left column -->
           <div class="case-overview__description reveal">
             <p class="case-overview__paragraph">
-              My team helped a seniors’ wellness application evolve from a
-              proof-of-concept MVP into a more full-fledged platform.
+              Everwell is an app that helps older adults track their health
+              areas and improve their well-being. But many users lost engagement
+              because it was difficult to find and return to the resources that
+              mattered to them.
             </p>
             <p class="case-overview__paragraph">
-              I played a key role in this major redesign, helping transform a
-              functional but boring app into an intuitive, accessible, and
-              motivating experience for older users.
+              We redesigned the experience to feel supportive and easy to
+              navigate, even for people who aren’t fully comfortable with
+              technology.
+            </p>
+            <p class="case-overview__paragraph">
+              I led key parts of the redesign, including the Resource Library
+              redesign and incorporating caregiver support. These updates made
+              it easier for users and their families to access and follow
+              personalized health guidance.
             </p>
             <aside class="case-overview__note" role="note">
               <strong>Note:</strong> some details of the project have been
