--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -627,12 +627,12 @@
             >
               <div class="case-highlights__visual">
                 <img
-                  src="../assets/images/HCH 1.png"
+                  src="../assets/images/HCH 1.gif"
                   alt="Screen showing patient age selection with a helper note explaining to fill the form as if you are the patient"
                   class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                 />
                 <img
-                  src="../assets/images/HCH_2_3.png"
+                  src="../assets/images/HCH_2_3.gif"
                   alt="Screen with injury-related question showing Yes and No radio buttons"
                   class="case-highlights__visual-image case-highlights__visual-image--wide img-bdr-btm reveal"
                 />
