feat(cases): add new block to Problem section

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -673,11 +673,43 @@
         class="case-context reveal"
         aria-labelledby="case-context-title"
       >
-        <!-- <a id="nav-problem"></a> -->
-        <div class="container case-context__content">
+        <div class="container">
           <h2 id="case-context-title" class="case-context__heading">
             A Canadian hospital approached us for a triage tool
           </h2>
+        </div>
+        <!-- 🍭A new part -->
+
+        <div class="design-intro_bg add-big-margin-bottom">
+          <img
+            src="../assets/icons/flower_red.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--left flower--left"
+            aria-hidden="true"
+          />
+          <img
+            src="../assets/icons/flower_red_round.svg"
+            alt=""
+            class="about-hero__flower about-hero__flower--right"
+            aria-hidden="true"
+          />
+          <div class="container design-intro__content">
+            <div class="twocol twocol--wide twocol--intro">
+              <h3 class="twocol__heading twocol__heading-special reveal">
+                The narrative
+              </h3>
+              <div class="twocol__main">
+                <p class="reveal">
+                  Dive in to learn more about the process behind the scenes and
+                  the thinking behind the solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- 🍭END: A new part -->
+        <!-- <a id="nav-problem"></a> -->
+        <div class="container case-context__content">
           <dl class="case-context__items">
             <div class="case-context__item reveal">
               <dt class="case-context__term">Problem</dt>
