feat(header): add hide-on-scroll behavior on case and about pages; fix tooltip overlap on home

--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <!-- Header -->
-    <header class="site-header site-header-about reveal">
+    <header class="site-header site-header-about">
       <div class="container">
         <a href="/" class="logo">Michelle Pavlova</a>
         <nav class="site-nav">
