--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -26,7 +26,7 @@
   </head>
   <body class="case">
     <!-- Header -->
-    <header class="site-header reveal">
+    <header class="site-header">
       <div class="container">
         <a href="/" class="logo">Michelle Pavlova</a>
         <nav class="site-nav">
