style(cases): remove flower decorations from info blocks

--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -363,7 +363,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -374,7 +374,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
@@ -681,7 +681,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -692,7 +692,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
