--- a/everwell-PROMs-and-trends/index.html
+++ b/everwell-PROMs-and-trends/index.html
@@ -370,7 +370,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -381,7 +381,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
@@ -727,7 +727,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -738,7 +738,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
