--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -371,7 +371,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -382,7 +382,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
@@ -771,7 +771,7 @@
         <!-- 🍭A new part -->
 
         <div class="design-intro_bg add-big-margin-bottom">
-          <img
+          <!-- <img
             src="../assets/icons/flower_red.svg"
             alt=""
             class="about-hero__flower about-hero__flower--left flower--left"
@@ -782,7 +782,7 @@
             alt=""
             class="about-hero__flower about-hero__flower--right"
             aria-hidden="true"
-          />
+          /> -->
           <div class="container design-intro__content">
             <div class="twocol twocol--wide twocol--intro">
               <h3 class="twocol__heading twocol__heading-special reveal">
@@ -1338,7 +1338,7 @@
               </dd>
             </div>
 
-            <div class="case-context__item reveal">
+            <div class="case-context__item case-context__item-no-mg reveal">
               <dt class="case-context__term add-small-margin-bottom">
                 Modular scalable design
               </dt>
